hot hot hot fix

--- a/SCME.UI/CustomControl/VirtualKeyboard.xaml
+++ b/SCME.UI/CustomControl/VirtualKeyboard.xaml
@@ -278,7 +278,7 @@
                         <StackPanel Orientation="Horizontal">
                             <Button Content="0" Width="{StaticResource BSizeErase}" />
                             <Button Content="." />
-                            <Button Content="Tm" />
+                            <Button Content="," />
                         </StackPanel>
                     </StackPanel>
                 </Grid>
