--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputLeakageCurrentTemplate.xaml
@@ -30,6 +30,7 @@
         <RowDefinition Height="auto" />
         <RowDefinition Height="auto" />
         <RowDefinition Height="auto" />
+        <RowDefinition Height="auto" />
     </Grid.RowDefinitions>
     <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Content="Номер канала" />
     <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource NumberPosition}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding NumberPosition}" SelectionChanged="ComboBox_SelectionChanged"/>
@@ -98,7 +99,7 @@
         </TextBlock>
     </Label>
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="3"   Value="{Binding SwitchedVoltage, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource DML}}"  
-                                  Minimum="{Binding SwitchedVoltageMin}" Maximum="{Binding SwitchedVoltageMax}" MirroredNegativeMinMax="{Binding PolarityDCSwitchingVoltageApplicationIsVisible}"/>
+                                  Minimum="{Binding SwitchedVoltageMin}" Maximum="{Binding SwitchedVoltageMax}" MirroredNegativeMinMax="True"/>
 
     <Label Grid.Column="3" Grid.Row="4"  Visibility="{Binding ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}">
         <TextBlock>
@@ -108,9 +109,25 @@
     <customControls:NumericUpDown Grid.Column="4" Grid.Row="4" Visibility="{Binding ShowAuxiliaryVoltagePowerSupply2, Converter={StaticResource B2V}}"  Value="{Binding AuxiliaryVoltagePowerSupply2, Converter={StaticResource DML}}"  
                                   Minimum="{Binding AuxiliaryVoltagePowerSupply2Min}" Maximum="{Binding AuxiliaryVoltagePowerSupply2Max}"/>
 
+
+    <Label Grid.Column="0" Grid.Row="5" Visibility="{Binding ShowAuxiliaryCurrentPowerSupplyMax1, Converter={StaticResource B2V}}">
+        <TextBlock>
+            Ограничение по току <LineBreak/>вспом. питания1, мА
+        </TextBlock>
+    </Label>
+    <customControls:NumericUpDown Grid.Column="1" Grid.Row="5"  Visibility="{Binding ShowAuxiliaryCurrentPowerSupplyMax1, Converter={StaticResource B2V}}" Value="{Binding AuxiliaryCurrentPowerSupplyMaximum1, Converter={StaticResource DML}}" 
+                                      Minimum="{Binding AuxiliaryCurrentPowerSupplyMaximumMin}" Maximum="{Binding AuxiliaryCurrentPowerSupplyMaximumMax}"/>
+
+    <Label Grid.Column="3" Grid.Row="5" Visibility="{Binding ShowAuxiliaryCurrentPowerSupplyMax2, Converter={StaticResource B2V}}">
+        <TextBlock>
+            Ограничение по току <LineBreak/>вспом. питания2, мА
+        </TextBlock>
+    </Label>
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="5"  Visibility="{Binding ShowAuxiliaryCurrentPowerSupplyMax2, Converter={StaticResource B2V}}" Value="{Binding AuxiliaryCurrentPowerSupplyMaximum2, Converter={StaticResource DML}}" 
+                                      Minimum="{Binding AuxiliaryCurrentPowerSupplyMaximumMin}" Maximum="{Binding AuxiliaryCurrentPowerSupplyMaximumMax}"/>
     
 
-    <Grid Grid.Row="5" Grid.ColumnSpan="5" Margin="0,24,0,0" Visibility="{Binding IsProfileStyle, Converter={StaticResource B2V}}">
+    <Grid Grid.Row="6" Grid.ColumnSpan="5" Margin="0,24,0,0" Visibility="{Binding IsProfileStyle, Converter={StaticResource B2V}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="225"  />
             <ColumnDefinition Width="225" />
@@ -132,7 +149,7 @@
         
     </Grid>
 
-    <Grid Grid.Row="5" Grid.ColumnSpan="5" Margin="0,24,0,0" Visibility="{Binding IsProfileStyle, Converter={StaticResource B2VI}}">
+    <Grid Grid.Row="6" Grid.ColumnSpan="5" Margin="0,24,0,0" Visibility="{Binding IsProfileStyle, Converter={StaticResource B2VI}}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="225"  />
             <ColumnDefinition Width="225" />
