--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputResidualVoltage.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/OutputResidualVoltage.xaml
@@ -31,6 +31,7 @@
         <RowDefinition Height="auto" />
         <RowDefinition Height="auto" />
         <RowDefinition Height="auto" />
+        <RowDefinition Height="auto" />
     </Grid.RowDefinitions>
     <Label Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Content="Номер канала" />
     <ComboBox Grid.Column="1" Grid.Row="0" ItemsSource="{Binding Source={StaticResource NumberPosition}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding NumberPosition}"  SelectionChanged="ComboBox_SelectionChanged"/>
@@ -76,14 +77,29 @@
     <customControls:NumericUpDown Grid.Column="1" Grid.Row="4" Visibility="{Binding ShowAuxiliaryVoltagePowerSupply1, Converter={StaticResource B2V}}"  Value="{Binding AuxiliaryVoltagePowerSupply1, Converter={StaticResource DML}}" 
                                   Minimum="{Binding ShowAuxiliaryVoltagePowerSupply1Min}" Maximum="{Binding ShowAuxiliaryVoltagePowerSupply1Max}"/>
 
+    <Label Grid.Column="0" Grid.Row="5" Visibility="{Binding ShowAuxiliaryCurrentPowerSupplyMax1, Converter={StaticResource B2V}}">
+        <TextBlock>
+            Ограничение по току <LineBreak/>вспом. питания1, мА
+        </TextBlock>
+    </Label>
+    <customControls:NumericUpDown Grid.Column="1" Grid.Row="5"  Visibility="{Binding ShowAuxiliaryCurrentPowerSupplyMax1, Converter={StaticResource B2V}}" Value="{Binding AuxiliaryCurrentPowerSupplyMaximum1, Converter={StaticResource DML}}" 
+                                      Minimum="{Binding AuxiliaryCurrentPowerSupplyMaximumMin}" Maximum="{Binding AuxiliaryCurrentPowerSupplyMaximumMax}"/>
+
+    <Label Grid.Column="3" Grid.Row="5" Visibility="{Binding ShowAuxiliaryCurrentPowerSupplyMax2, Converter={StaticResource B2V}}">
+        <TextBlock>
+             Ограничение по току <LineBreak/>вспом. питания2, мА
+        </TextBlock>
+    </Label>
+    <customControls:NumericUpDown Grid.Column="4" Grid.Row="5"  Visibility="{Binding ShowAuxiliaryCurrentPowerSupplyMax2, Converter={StaticResource B2V}}" Value="{Binding AuxiliaryCurrentPowerSupplyMaximum2, Converter={StaticResource DML}}" 
+                                      Minimum="{Binding AuxiliaryCurrentPowerSupplyMaximumMin}" Maximum="{Binding AuxiliaryCurrentPowerSupplyMaximumMax}"/>
 
 
-    <Label Grid.Column="0" Grid.Row="5" >
+    <!--<Label Grid.Column="0" Grid.Row="5" >
         <TextBlock>
             Форма импульса<LineBreak/>коммутируемого тока
         </TextBlock>
     </Label>
-    <ComboBox Grid.Column="1" Grid.Row="5" ItemsSource="{Binding Source={StaticResource SwitchingCurrentPulseShape}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding SwitchingCurrentPulseShape}" />
+    <ComboBox Grid.Column="1" Grid.Row="5" ItemsSource="{Binding Source={StaticResource SwitchingCurrentPulseShape}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding SwitchingCurrentPulseShape}" />-->
 
 
 
@@ -153,20 +169,20 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-            <Label Grid.Column="0" Grid.Row="0" >
+            <Label Grid.Column="0" Grid.Row="0" Visibility="{Binding OpenState, Converter={StaticResource B2VI}}">
             <TextBlock>
             Выходное остаточное<LineBreak/>напряжение мин., В
             </TextBlock>
         </Label>
-        <customControls:NumericUpDown Grid.Column="1" Grid.Row="0"   Value="{Binding OutputResidualVoltageMinimum, Converter={StaticResource DML}}" 
+        <customControls:NumericUpDown Grid.Column="1" Grid.Row="0" Visibility="{Binding OpenState, Converter={StaticResource B2VI}}"  Value="{Binding OutputResidualVoltageMinimum, Converter={StaticResource DML}}" 
                                       Minimum="{Binding OutputResidualVoltageMinimumMin}" Maximum="{Binding OutputResidualVoltageMinimumMax}"/>
 
-            <Label  Grid.Column="3" Grid.Row="0" >
+        <Label  Grid.Column="3" Grid.Row="0" Visibility="{Binding OpenState, Converter={StaticResource B2VI}}">
             <TextBlock>
             Выходное остаточное<LineBreak/>напряжение макс., В
             </TextBlock>
         </Label>
-        <customControls:NumericUpDown Grid.Column="4" Grid.Row="0"    Value="{Binding OutputResidualVoltageMaximum, Converter={StaticResource DML}}" 
+        <customControls:NumericUpDown Grid.Column="4" Grid.Row="0"  Visibility="{Binding OpenState, Converter={StaticResource B2VI}}"  Value="{Binding OutputResidualVoltageMaximum, Converter={StaticResource DML}}" 
                                       Minimum="{Binding OutputResidualVoltageMaximumMin}" Maximum="{Binding OutputResidualVoltageMaximumMax}"/>
 
         
