--- a/SCME.WpfControlLibrary/Pages/SSRTUPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/SSRTUPage.xaml
@@ -130,7 +130,11 @@
             </Grid>
 
 
-            <Label Grid.Column="0" Grid.ColumnSpan="5"  Grid.Row="3" Content="Сопротивление в открытом состоянии, Ом" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.OpenState, Converter={StaticResource B2V}}"/>
+            <Label Grid.Column="0" Grid.ColumnSpan="5"  Grid.Row="3" Margin="0,0,30,0"  Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.OpenState, Converter={StaticResource B2V}}">
+                <TextBlock>
+                    Сопротивление в открытом<LineBreak/> состоянии, Ом
+                </TextBlock>
+            </Label>
             <Label Grid.Column="1" Grid.Row="3" Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=ItemVM.OpenState, Converter={StaticResource B2V}}" 
                        Content="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Page}}, Path=VM.OpenResistance, Converter={StaticResource DML}}" HorizontalAlignment="Right"/>
 
